crates/tuxedo/tests/snapshots/snapshots__insert_dialog_after_nl_parse_styled.snap
---
source: crates/tuxedo/tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#6b7280 bg=#1f232b mod=bold} FILTERS{/}{fg=#c8ccd4 bg=#1f232b}                  {/}{bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}▶{/}{fg=#e07a7a bg=#1f232b}▮{/}{fg=#8aa9c9 bg=#1f232b}◀{/}{bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b mod=bold}/tmp/tuxedo-snapshot.txt{/}{fg=#6b7280 bg=#1f232b}  •  18 tas{/}{fg=#6b7280 bg=#1f232b mod=bold} DETAIL{/}{fg=#c8ccd4 bg=#1f232b}                           {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#7fb3a8 bg=#1f232b mod=bold} PROJECTS{/}{fg=#c8ccd4 bg=#1f232b}                 {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(2){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23 mod=bold}PRIORITY A{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}──────────────────────{/}{fg=#6b7280 bg=#1f232b} priority  {/}{fg=#e07a7a bg=#1f232b mod=bold}(A){/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+work           {/}{fg=#6b7280 bg=#1f232b}  4{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  1 {/}{fg=#8aa9c9 bg=#1a1d23 mod=bold}▸ {/}{fg=#e07a7a bg=#1a1d23 mod=bold}(A) {/}{fg=#c8ccd4 bg=#1a1d23}Finish Q2 board deck {/}{fg=#7fb3a8 bg=#1a1d23}+work{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#c89a6e bg=#1a1d23}@la{/}{fg=#6b7280 bg=#1f232b} created   {/}{fg=#c8ccd4 bg=#1f232b}2026-05-01             {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+health         {/}{fg=#6b7280 bg=#1f232b}  3{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  2 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23 mod=bold}(A) {/}{fg=#c8ccd4 bg=#1a1d23}Call dentist to reschedule cle{/}{fg=#6b7280 bg=#1f232b} due       {/}{fg=#c8ccd4 bg=#1f232b}2026-05-06  {/}{fg=#e07a7a bg=#1f232b}today{/}{fg=#c8ccd4 bg=#1f232b}      {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+finance        {/}{fg=#6b7280 bg=#1f232b}  2{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(3){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}PRIORITY B{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}──────────────────────{/}{fg=#6b7280 bg=#1f232b} projects  {/}{fg=#7fb3a8 bg=#1f232b}+work{/}{fg=#c8ccd4 bg=#1f232b}                  {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+home           {/}{fg=#6b7280 bg=#1f232b}  1{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  3 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}(B) {/}{fg=#c8ccd4 bg=#1a1d23}Review pull requests for auth {/}{fg=#6b7280 bg=#1f232b} contexts  {/}{fg=#c89a6e bg=#1f232b}@laptop{/}{fg=#c8ccd4 bg=#1f232b}                {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+learning       {/}{fg=#6b7280 bg=#1f232b}  1{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  4 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}(B) {/}{fg=#c8ccd4 bg=#1a1d23}Renew passport before summer t{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+personal       {/}{fg=#6b7280 bg=#1f232b}  1{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  5 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}(B) {/}{fg=#c8ccd4 bg=#1a1d23}Draft hiring rubric for senior{/}{fg=#6b7280 bg=#1f232b mod=bold} RAW{/}{fg=#c8ccd4 bg=#1f232b}                              {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+travel         {/}{fg=#6b7280 bg=#1f232b}  1{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(2){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#7aa67a bg=#1a1d23 mod=bold}PRIORITY C{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}──────────────────────{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23}  6 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7aa67a bg=#1a1d23 mod=bold}(C) {/}{fg=#c8ccd4 bg=#1a1d23}Pay quarterly estimated taxes {/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#e07a7a bg=#1f232b mod=bold}(A){/}{fg=#c8ccd4 bg=#1f232b} 2026-05-01 Finish Q2 board   {/}
{fg=#c89a6e bg=#1f232b mod=bold} CONTEXTS{/}{fg=#c8ccd4 bg=#1f232b}                 {/}{fg=#6b7280 bg=#1a1d23}  7 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7aa67a bg=#1a1d23 mod=bold}(C) {/}{fg=#c8ccd4 bg=#1a1d23}Order new running shoes {/}{fg=#7fb3a8 bg=#1a1d23}+healt{/}{fg=#c8ccd4 bg=#1f232b} deck {/}{fg=#7fb3a8 bg=#1f232b}+work{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#c89a6e bg=#1f232b}@laptop{/}{fg=#c8ccd4 bg=#1f232b}               {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@errands        {/}{fg=#6b7280 bg=#1f232b}  4{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(8){/}{fg=#2a2f38 bg=#1f232b}┌{/}{fg=#8aa9c9 bg=#1f232b mod=bold} ADD TASK {/}{fg=#2a2f38 bg=#1f232b}────────────────────────────┐{/}{fg=#e07a7a bg=#1f232b mod=bold}:2026-05-06{/}{fg=#c8ccd4 bg=#1f232b}                   {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@home           {/}{fg=#6b7280 bg=#1f232b}  4{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  8 {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                              {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@laptop         {/}{fg=#6b7280 bg=#1f232b}  4{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  9 {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#8aa9c9 bg=#1f232b mod=bold}› {/}{fg=#c89a6e bg=#1f232b}bank{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#d4b06a bg=#1f232b}due:2026-06-01{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}rec:+1m{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}t:-3d{/}{fg=#c8ccd4 bg=#1f232b}█{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                              {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@phone          {/}{fg=#6b7280 bg=#1f232b}  3{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23} 10 {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}ok · {/}{fg=#d4b06a bg=#1f232b}due 2026-06-01 {/}{fg=#6b7280 bg=#1f232b}· 1 +{/}{fg=#7fb3a8 bg=#1f232b}project {/}{fg=#6b7280 bg=#1f232b}1 @{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                              {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23} 11 {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                              {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23} 12 {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}format: {/}{fg=#e07a7a bg=#1f232b mod=bold}(A) {/}{fg=#c8ccd4 bg=#1f232b}Buy milk {/}{fg=#7fb3a8 bg=#1f232b}+shop {/}{fg=#c89a6e bg=#1f232b}@home {/}{fg=#d4b06a bg=#1f232b}due{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                              {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23} 13 {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                              {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23} 14 {/}{fg=#2a2f38 bg=#1f232b}└──────────────────────────────────────┘{/}{fg=#c8ccd4 bg=#1f232b}                              {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23} 15 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#c8ccd4 bg=#1a1d23}    Replace bathroom faucet washer{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(3){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#6b7280 bg=#1a1d23 mod=bold}COMPLETED{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}───────────────────────{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23} 16 {/}{fg=#5a6270 bg=#1a1d23}✓     {/}{fg=#5a6270 bg=#1a1d23 mod=dim}Submit{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23 mod=dim}expense{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23 mod=dim}report{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23}+work{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23}@l{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23} 17 {/}{fg=#5a6270 bg=#1a1d23}✓     {/}{fg=#5a6270 bg=#1a1d23 mod=dim}Renew{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23 mod=dim}domain{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23 mod=dim}registration{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23}+wor{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23} 18 {/}{fg=#5a6270 bg=#1a1d23}✓     {/}{fg=#5a6270 bg=#1a1d23 mod=dim}Book{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23 mod=dim}flights{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23 mod=dim}for{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23 mod=dim}July{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23 mod=dim}trip{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#5a6270 bg=#1a1d23}+tr{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#1a1d23 bg=#8aa9c9 mod=bold} NORMAL · parsed natural language; press Enter to save {/}{bg=#252a33}  {/}{fg=#a8b0bc bg=#252a33}h/l {/}{fg=#6b7280 bg=#252a33}18 open · 2026-05-06 · tuxedo 2026.7.1 {/}
